--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2048,7 +2048,10 @@
           >
             linkedin<i class="fa-solid fa-arrow-right-long"></i>
           </a>
-          <a href="#" class="media-2" target="_blank"
+          <a
+            href="https://www.instagram.com/govindbhardwaj87/?next=%2F"
+            class="media-2"
+            target="_blank"
             >instagram<i class="fa-solid fa-arrow-right-long"></i
           ></a>
           <a
