--- a/src/app/main-page/main-page.component.html
+++ b/src/app/main-page/main-page.component.html
@@ -7,42 +7,51 @@
           <img
             src="../../assets/images/designer-text.svg"
             alt
-            class="designer-text-img" />
+            class="designer-text-img"
+          />
         </div>
         <div class="hero-heading">
           <h1 class="cursor-scale">& developer</h1>
-
         </div>
       </div>
       <div class="col-md-5 col-lg-4 col-xl-3 hero-profile-wrapper">
         <img
           src="../../assets/images/profie.avif"
           alt
-          class="profile-img cursor-scale" />
+          class="profile-img cursor-scale"
+        />
       </div>
       <div
-        class="d-flex justify-content-between flex-row-reverse align-items-center hero-text-wrapper">
+        class="d-flex justify-content-between flex-row-reverse align-items-center hero-text-wrapper"
+      >
         <div
-          class="name-text-wrapper text-end d-flex flex-column gap-1 align-items-end">
+          class="name-text-wrapper text-end d-flex flex-column gap-1 align-items-end"
+        >
           <h1 class="mb-0 mt-2 cursor-scale">govind bhardwaj</h1>
           <span class="hero-para">
             <p class="cursor-scale small">
-              PASSIONATE ABOUT CREATING UNFORGETTABLE</p>
-          </span>
-          <span class="hero-para">
-            <p class="cursor-scale small">
-              AND BEAUTIFUL DIGITAL EXPERIENCES
+              PASSIONATE ABOUT CREATING UNFORGETTABLE
             </p>
           </span>
-
+          <span class="hero-para">
+            <p class="cursor-scale small">AND BEAUTIFUL DIGITAL EXPERIENCES</p>
+          </span>
         </div>
-        <div class="bounce-scroll-text"
-          style="opacity: 0;transition: all 0.4s linear;">
-          <img src="../../assets/images/scroll-down-text.svg" alt
-            id="scroll-text">
+        <div
+          class="bounce-scroll-text"
+          style="opacity: 0; transition: all 0.4s linear"
+        >
+          <img
+            src="../../assets/images/scroll-down-text.svg"
+            alt
+            id="scroll-text"
+          />
           <div class="scroll-inner-circle">
-            <img src="../../assets/images/scroll-inner-circle.svg" alt
-              class="scroll-inner-circle">
+            <img
+              src="../../assets/images/scroll-inner-circle.svg"
+              alt
+              class="scroll-inner-circle"
+            />
           </div>
         </div>
       </div>
