--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,34 +1,44 @@
 <div class="about-content-wrapper mb-5">
-  <section class="about-content" id="about-section" style="padding:2rem">
+  <section class="about-content" id="about-section" style="padding: 2rem">
     <div class="about-heading-wrapper">
       <h1 class="about-heading cursor-scale">About me</h1>
     </div>
 
     <div class="row mt-5 pt-5 pb-5">
       <div
-        class="col-md-4 d-flex gap-3 about-para-text text-end flex-column justify-content-between">
-        <p>I always consider design to be my true
-          calling, which I have been doing for more than 3 years. This
-          experience helped me become a pro at
-          creating <span><i>web interfaces</i></span>.</p>
+        class="col-md-4 d-flex gap-3 about-para-text text-end flex-column justify-content-between"
+      >
+        <p>
+          I always consider design to be my true calling, which I have been
+          doing for more than 3 years. This experience helped me become a pro at
+          creating <span><i>web interfaces</i></span
+          >.
+        </p>
 
         <div
-          class="d-flex justify-content-end gap-3 align-items-center location-text-wrapper">
-          <p>based on new delhi, india<i class="fa-solid fa-location-dot"
-              style="font-size: 1.5rem; color: #fff;margin-left: 0.5rem;"></i></p>
-
+          class="d-flex justify-content-end gap-3 align-items-center location-text-wrapper"
+        >
+          <p>
+            based on new delhi, india<i
+              class="fa-solid fa-location-dot"
+              style="font-size: 1.5rem; color: #fff; margin-left: 0.5rem"
+            ></i>
+          </p>
         </div>
       </div>
       <div class="col-md-4 col-lg-4 about-profile-img-wrapper">
-        <img src="../../assets/images/profie.avif" alt>
+        <img src="../../assets/images/profie.avif" alt />
       </div>
       <div
-        class="col-md-4 d-flex gap-3 about-para-text align-items-end text-left">
-        <p>Enthusiastic about crafting ideas,
-          <span><i>visual</i></span> ,<span>
-            <i> motion
-              design</i></span> and love to develop flawless <span><i>user
-              experiences</i></span>.</p>
+        class="col-md-4 d-flex gap-3 about-para-text align-items-end text-left"
+      >
+        <p>
+          Enthusiastic about crafting ideas, <span><i>visual</i></span> ,<span>
+            <i> motion design</i></span
+          >
+          and love to develop flawless <span><i>user experiences</i></span
+          >.
+        </p>
       </div>
     </div>
     <div class="services-content mt-5 pt-5 mb-5">
